--- a/base-newStyle copy/pages/_FillAndSignV2Page.scss
+++ b/base-newStyle copy/pages/_FillAndSignV2Page.scss
@@ -205,7 +205,7 @@ html:has(#TafnitCore_System_UI_App_Tools_FillAndSignV2Page){
 
         &.x-control-wrapper {
 
-            flex-direction: row-reverse !important;
+            //flex-direction: row-reverse !important;
             .x-control-caption-wrapper {
                 flex: auto;
             }
