--- a/copy/Tass/FillAndSignV2Page/_FillAndSignV2Page.scss
+++ b/copy/Tass/FillAndSignV2Page/_FillAndSignV2Page.scss
@@ -97,7 +97,7 @@
 
   & .xstyle-checkbox-wrapper.x-control-wrapper {
 
-    flex-direction: row-reverse !important;
+   // flex-direction: row-reverse !important;
 
 
     .x-control-content-wrapper {
