--- a/copy/portal/PortalTafnit/style.scss
+++ b/copy/portal/PortalTafnit/style.scss
@@ -31,6 +31,7 @@
 @import './components/headerMobile';
 @import './components/tab';
 @import './components/treeview';
+@import './components/xmenu';
 
 @import './page/CloudDashboard';
 @import './page/login';
@@ -41,6 +42,7 @@
 @import './page/loginMobile';
 @import './page/MobilePortalTransaction';
 @import './page/AreaSelection';
+@import './page/ServiceCallAction';
 
 
 
