--- a/site/alber/Tass/FillAndSignV2Page/_FillAndSignV2Page.scss
+++ b/site/alber/Tass/FillAndSignV2Page/_FillAndSignV2Page.scss
@@ -21,7 +21,7 @@ $Radio-button-on-background: #007FC1 ;
 $Radio-button-on-drop-shadow: 0px 0px 4px #1182B1; 
 $Radio-button-label-text: #000000; 
 
-$Check-box-on-background: #ffff;
+$Check-box-on-background: #007FC1;
 $Check-box-on-drop-shadow:  0px 0px 4px #1182B1;
 $Check-box-label-text: #000000;
 
