--- a/Newbase-newStyle/components/Media-Control/_carDamage.scss
+++ b/Newbase-newStyle/components/Media-Control/_carDamage.scss
@@ -32,6 +32,8 @@
 
 /*car damage window*/
 .x-sectionDamageTypeAndCamera {
+    padding-bottom: 40px;
+
     .x-winHeadLine {
         display: inline-block;
 
@@ -79,7 +81,7 @@
                     color: var(--vanilla-other-black, #000);
                     text-align: right;
                     font-family: Heebo;
-                    font-size: 16px;
+                    font-size: 14px;
                     font-style: normal;
                     font-weight: 400;
                     line-height: 16px
@@ -106,14 +108,14 @@
             }
 
             .x-cameraSection_btns_wrapper {
-                width: 60%;
+                width: 100%;
                 display: flex;
                 justify-content: flex-end;
                 float: right;
                 align-items: center;
 
                 .x-camera1 {
-                    margin: 0 5%;
+                    margin: 0 10px;
 
                     #cameraBtnPoint {
                         width: 40px;
@@ -258,12 +260,23 @@
         display: inline-block;
         width: 100%;
         margin-top: 10px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        padding: 10px;
+        right: 0;
+        margin: 0 auto;
+        width: auto;
+        border-radius: 4px 4px 0px 0px;
+        background: var(--color-other-white, #FFF);
+        box-shadow: 0px 0px 10px 0px rgba(103, 103, 103, 0.10);
 
         .k-button {
             float: right;
             width: 20%;
             font-size: 15px;
             margin: 0 2px;
+            height: 40px !important;
         }
 
         #deleteBtnPoint {
