--- a/Newbase-newStyle/components/Simple/_floatbutton.scss
+++ b/Newbase-newStyle/components/Simple/_floatbutton.scss
@@ -29,12 +29,12 @@
         }
     }
     button{
-    background:  var(--floatbutton-bg-color-default) ;
+    background:  var(--floatbutton-bg-color-default) !important ;
      box-shadow:var(--floatbutton-shadow);
      padding: 25px;
      border-radius: 0;
      height: 80px;
-    
+ 
 
      & .k-icon{
         color: var(--floatbutton-icon-color-default);
@@ -42,17 +42,22 @@
 
      & .k-fab-text{
         font-family: 'Heebo';
-        color: var(--floatbutton-text-color-default);
+        color: var(--floatbutton-text-color-dafault) !important;
      }
 
 
      &:hover{
-        background: var(--floatbutton-bg-color-hover) ;
+        background: var(--floatbutton-bg-color-hover) !important;
      }
 
      &:focus{
-        background: var(--floatburron-bg-color-focus);
-        border: 1px solid var(--floatbutton-border-color-focus);
+        background: var(--floatburron-bg-color-focus) !important;
+        border: 1px solid var(--floatbutton-border-color-focus) ;
+        box-shadow: 0px 0px 5px 5px rgba(117, 155, 172, 0.20), 0px 2px 4px 0px rgba(117, 155, 172, 0.20), 0px 4px 5px 0px rgba(117, 155, 172, 0.40) !important;
+
+        span{
+            color: white !important;
+        }
      }
     }
 }
