--- a/Newbase-newStyle/components/Value-Control/_checkbox.scss
+++ b/Newbase-newStyle/components/Value-Control/_checkbox.scss
@@ -4,32 +4,45 @@
     min-height: 39px;
     margin-top: 15px;
  input{
-    border: 1px solid var(--checkbox-unselect-icon-color-default);
+    border: 1px solid var(--checkbox-unselected-border-color-default);
     width: 14px;
     height: 14px;
     border-radius: 2px;
+    background: var(--checkbox-unselected-bg-color-default);
     &:checked{
-        border: 1px solid var(--checkbox-selected-icon-color-default);
+        border: 1px solid var(--checkbox-selected-border-color-default);
+        background: var(--checkbox-selected-bg-color-default);
+        &::before{
+            color: var(--checkbox-selected-icon-color-default);;
+          }
 
-
+          &:hover{
+            border-radius: 2px;
+            border: 1px solid var(--checkbox-selected-border-color-hover);
+            background: var(--checkbox-selected-bg-color-hover);
+            &::before{
+              color: var(--checkbox-selected-icon-color-hover);;
+            }
+        }
     }
 
     &:hover{
         border-radius: 2px;
-        border: 1px solid var(--checkbox-selected-icon-color-hover);
-        background: var(--color-other-white); 
+        border: 1px solid var(--checkbox-unselected-border-color-hover);
+        background: var(--checkbox-unselected-bg-color-hover);
         &::before{
           color: var(--checkbox-selected-icon-color-hover);;
         }
     }
 
     &:focus{
-        border: 1px solid var(--checkbox-unselect-icon-color-focus);
-        background: var(--color-other-white);
-        box-shadow: 0px 0px 5px 0px rgba(142, 187, 207, 0.60) !important;
+        border-radius: 2px;
+        border: 1px solid var(--checkbox-selected-border-color-focus) !important;
+        background: var(--checkbox-selected-bg-color-focus);
+        box-shadow: var(--checkbox-focus) !important;
     }
     &::before{
-        color: var( --checkbox-selected-icon-color-focus);
+        color: var(--checkbox-selected-icon-color-focus);
     }
 
 
