--- a/Newbase-newStyle/components/Value-Control/_lookup.scss
+++ b/Newbase-newStyle/components/Value-Control/_lookup.scss
@@ -1,3 +1,48 @@
+
+.xstyle-lookuptafnit-wrapper,.xstyle-lookup-wrapper{
+    & label{
+        @extend %texbox-label;
+    
+    }
+
+
+.x-selection-lookup{
+    display: block;
+    margin: 0;
+
+    & >div{
+        padding: 0;
+    }
+  input{
+    height: 40px !important;
+  }
+  .xLookupFullDescription{
+    padding-right: 15px;
+    color: var(--input-text-color-default);
+    font-size: 13px !important;
+  }
+
+  .x-open-lookup{
+    top: 50%;
+    transform: translateY(-50%);
+    left: 10px !important;
+    width: fit-content !important;
+    position: absolute !important;
+    .x-selection-lookup-button{
+        background: none !important;
+        height: fit-content !important;
+        width: fit-content !important;
+
+        span.x-input-group-text.s-input-group-text.x-cs-btn{
+            color: var(--input-icon-color-default);
+        }
+    }
+  }
+}
+
+
+}
+
 .x-description-lookup {
 
     height: 50px;
@@ -7,6 +52,9 @@
 mandatory {
     display: none;
 }
+
+
+
 input{
     border-radius: 4px;
     border: 1px solid var(--input-border-color-default) !important;
@@ -46,6 +94,14 @@ input{
     border-radius: 4px;
     border: 1px solid var(--input-border-color-default) !important;
     background: var(--color-other-white);
+    color: var(--input-text-color-default);
+    text-align: right;
+    font-family: Heebo;
+    font-size: 16px !important;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%; /* 20.8px */
+    padding-right: 15px;
     &:focus{
         box-shadow:var(--input-focus-shadow) ;
         border: 1px solid var(--input-border-color-focus) ;
@@ -107,6 +163,7 @@ label{
                         border: 0;
                         border-top-left-radius: 5px;
                         border-bottom-left-radius: 5px;
+                        color: white;
                     }
                 }
             }
@@ -114,10 +171,10 @@ label{
             .x-form-control {
                 width: 100%;
                 height: 100%;
-                border-radius: 0;
-                border-bottom-right-radius: 5px;
-                border-top-right-radius: 5px;
-                font-size: 18px;
+                color: var(--input-text-color-default);
+                font-size: 13px !important;
+           
+
             }
 
         }
