--- a/Newbase-newStyle/components/_grid.scss
+++ b/Newbase-newStyle/components/_grid.scss
@@ -1,6 +1,30 @@
-.xstyle-gridv4-wrapper{
+.xstyle-gridv4-wrapper,.xstyle-igrid-wrapper,.xstyle-gridv4lookup-wrapper {
 // toolbar //
+.k-auto-scrollable{
+ 
+  &::-webkit-scrollbar {
+    width: 10px ;
+    border-radius: 10px;
+    position: absolute;
+  }
 
+
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: #f0f0f0;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background:rgba(142, 187, 207, 1);
+    border-radius: 10px;
+    
+
+    &:hover {
+      background:rgba(142, 187, 207, 1) ;
+      
+    }
+    }
+}
 .k-toolbar.k-toolbar-resizable{
   background: var(--grid-toolbar-bg-color-default);
   padding: 10px 20px;
@@ -28,7 +52,9 @@
     }
   }
 }
-  .x-grid-control{
+
+
+  .x-grid-control,.x-control-content-wrapper{
     background: none;
     border: none;
 
@@ -36,13 +62,16 @@
 
 
   // header //
-    .k-grid-header{
+    .k-grid-header,.x-oldGrid-control {
       border: none;
       border-top: 1px solid var(--grid-header-border-color-default);
       border-bottom: 1px solid var(--grid-header-border-color-default);
       background: var(--grid-header-bg-color-default);
-
-      .k-grid-header-wrap {
+      padding: 5px;
+      thead{
+        background: none;
+      }
+      .k-grid-header-wrap,.k-selectable {
         border: none;
 
         tr{
@@ -55,12 +84,16 @@
             text-align: right;
             font-feature-settings: 'clig' off, 'liga' off;
             font-family: Heebo;
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             font-weight: 500;
             line-height: 150%;
+            box-shadow: none !important;
+
+
             &:has(a.k-grid-filter-menu){
-      
+               padding-top: 0;
+               padding-bottom: 0;
               .k-grid-filter-menu{
                 margin: 0 !important;
                 padding: 0 ;
@@ -74,7 +107,7 @@
                   font-variant: normal;
                   text-transform: none;
                   line-height: 1;
-                  font-size: 14px !important;
+                  font-size: 12px !important;
                   font-weight: 300;
 
                 }
@@ -95,7 +128,7 @@
                     font-variant: normal;
                     text-transform: none;
                     line-height: 1;
-                    font-size: 14px !important;
+                    font-size: 12px !important;
                     font-weight: 300;
 
                   }
@@ -108,7 +141,7 @@
             text-align: right;
             font-feature-settings: 'clig' off, 'liga' off;
             font-family: Heebo;
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             font-weight: 500;
             line-height: 150%;
@@ -122,6 +155,10 @@
 //body //
 
 .k-grid-content {
+
+  &.k-auto-scrollable{
+    overflow: auto;
+  }
   tr{
 
     height: 35px !important;
@@ -157,13 +194,89 @@
       font-family: Heebo;
       padding-top: 0;
       padding-bottom: 0;
-      font-size: 13px;
+      font-size: 12px;
       font-style: normal;
       border: none;
       height: 35px !important;
       font-weight: 400;
       line-height: 120%; 
       border-bottom: 1px solid var(--grid-cell-border-color-default);
+
+
+      &:has(.k-grid-delete),&:has(.k-grid-edit),&:has(.k-grid-update),&:has(.k-grid-cancel) {
+
+        display: grid;
+        grid-template-columns: max-content;
+        grid-template-areas: "item2 item1";
+        align-items: center;
+        justify-content: flex-end;
+        gap: 5px;
+             .k-grid-delete{
+              grid-area: item1;
+              .k-icon {
+                &:before{
+                  color: var(--grid-cell-icon-color-default) !important;
+                  content: "\e970";
+                  font-family: 'icomoon';
+                  font-size: 18px;
+                }
+               }
+             }
+
+             .k-grid-edit{
+              grid-area: item2; 
+              .k-icon {
+                &:before{
+                  content: "\e9b8";
+                  font-family: 'icomoon';
+                  color: var(--grid-cell-icon-color-default) !important;    
+                  font-size: 18px;
+                }
+               }
+             }
+
+             .k-grid-cancel{
+              grid-area: item1; 
+              .k-icon {
+                &:before{
+                  content: "\e96c";
+                  font-family: 'icomoon';
+                  color: var(--grid-cell-icon-color-default) !important;
+                  font-size: 18px;
+                }
+               }
+             }
+
+             .k-grid-update{
+              grid-area: item2; 
+              .k-icon {
+                &:before{
+                  content: "\e9a2";
+                  font-family: 'icomoon';
+                  color: var(--grid-cell-icon-color-default) !important;     
+                  font-size: 18px;
+                }
+               }
+             }
+         .k-button-text{
+          display: none;
+         }
+
+         .k-grid-edit,.k-grid-delete,.k-grid-update,.k-grid-cancel{
+             background: none !important;
+             border: none !important;
+             box-shadow: none !important;
+             margin: 0;
+
+         }
+
+      }
+      button{
+        float: left;
+
+
+
+      }
       &:hover{
         background: var(--grid-cell-bg-color-hover);
       }
@@ -236,7 +349,7 @@
       color: var(--label-text-color-default);
       text-align: right;
       font-family: Heebo;
-      font-size: 13px;
+      font-size: 12px;
       font-style: normal;
       font-weight: 400;
       line-height: 120%;
@@ -247,7 +360,7 @@
       color: var(--grid-pager-numpage-text-color-default);
       text-align: right;
       font-family: Heebo;
-      font-size: 13px;
+      font-size: 12px;
       font-style: normal;
       font-weight: 400;
       line-height: 100%; ;
@@ -343,7 +456,7 @@ border: none;
 
 font-style: normal !important;
 font-weight: 400;
-font-size: 13px !important;
+font-size: 12px !important;
 line-height: 30px;
 color:var(--grid-pager-nav-arrow-icon-color-default)  !important;
 left: -5px;
@@ -360,7 +473,7 @@ top: 2px;
   content: "\f078";
   font-family: "Font Awesome 5 Pro";
   color:var(--grid-pager-nav-arrow-icon-color-default) !important;
-  font-size: 13px;
+  font-size: 12px;
   right: 5px;
   top: 5px;
 }
@@ -370,4 +483,80 @@ top: 2px;
 }
 
 }
+}
+
+
+.k-filter-menu.k-popup {
+  border-radius: 4px !important;
+  padding: 20px;
+  box-shadow: 0px 6px 5px 0px rgba(187, 216, 229, 0.30) !important;
+  border: 1px solid var(--window-border-color-default);
+  background: var(--window-bg-color-default);
+  .k-filter-menu-container{
+    padding: 0;
+  }
+  .k-filter-help-text{
+    color: var(--label-text-color-title);
+    text-align: right;
+    font-family: Heebo;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+    margin-bottom: 10px;
+  }
+
+  .k-dropdownlist {
+    background: none;
+
+    .k-icon-button{
+      &:hover{
+        background: none !important;
+      }
+      span{
+        color: #000;
+      }
+    }
+  }
+
+  .k-input-value-text{
+    color: var(--input-text-color-default);
+text-align: right;
+
+/* Window Content */
+font-family: Heebo;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 21px; /* 150% */
+  }
+  .k-textbox{
+    border-radius: 4px;
+    margin-top: 10px;
+    border: 1px solid var(--input-border-color-default);
+    background: var(--color-other-white);
+    &:focus-within{
+      box-shadow:var(--input-focus-shadow)  !important ;
+      border: 1px solid var(--input-border-color-focus) ;
+        outline: none !important;
+    }
+
+    input{
+      color:var(--input-text-color-default);
+      text-align: right;
+      
+      /* Window Content */
+      font-family: Heebo;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 21px; /* 150% */
+      height: 40px;
+      padding: 0;
+    }
+  }
+
+  button{
+    margin: 0 !important;
+  }
 }
