--- a/Newbase-newStyle/components/container-controls/_window.scss
+++ b/Newbase-newStyle/components/container-controls/_window.scss
@@ -6,6 +6,10 @@
     #watermark{
         display:none;
     }
+
+    footer{
+        border-radius: 0 0 10px 10px !important;
+    }
     @media all and (-ms-high-contrast: none),
     (-ms-high-contrast: active) {
         footer {
@@ -64,9 +68,9 @@
         height: auto;
     }
 
-    border-radius: 10px;
+    border-radius: 4px;
     background: var(--vanilla-other-white, #FFF);
-    box-shadow:  0px 5px 8px 0px rgba(142, 187, 207, 0.20) !important;
+    box-shadow:  var(--window-shadow ) !important;
     border: none;
     padding: 20px;
     right: 0 !important;
@@ -83,12 +87,12 @@
         position: fixed;
         top: 0;
         z-index: 24;
-        background: #F5F5F5;
+        background: var(--window-header-bg-color);
         left: 0;
 
       .k-window-title{
-
-            color: var(--vanilla-primary-500, #8EBBCF);
+        
+            color: var(--window-window-title-header);
             text-align: right;
             font-family: 'Heebo';
             font-size: 16px;
