--- a/Newbase-newStyle/variables/_masterVariable.scss
+++ b/Newbase-newStyle/variables/_masterVariable.scss
@@ -99,20 +99,58 @@
     --row-border-border-color: rgba(222, 222, 222, 1);
     --row-primary-bg-color: rgba(255, 255, 255, 1);
     --row-bg-bg-color: rgba(251, 251, 251, 1);
-    --checkbox-bg-color-hover: rgba(245, 245, 245, 1);
-    --checkbox-bg-color-default: rgba(255, 255, 255, 1);
-    --checkbox-selected-icon-color-default: rgba(142, 187, 207, 1);
-    --checkbox-unselect-icon-color-default: rgba(0, 0, 0, 1);
-    --checkbox-icon-color-disable: rgba(200, 200, 200, 1);
-    --checkbox-selected-icon-color-focus: rgba(172, 206, 221, 1);
-    --checkbox-unselect-icon-color-focus: rgba(172, 206, 221, 1);
-    --radio-selected-icon-color-default: rgba(142, 187, 207, 1);
-    --radio-unselect-icon-color-default: rgba(0, 0, 0, 1);
-    --radio-bg-color-default: rgba(255, 255, 255, 1);
-    --radio-icon-color-disable: rgba(200, 200, 200, 1);
-    --radio-bg-color-hover: rgba(245, 245, 245, 1);
-    --radio-selected-icon-color-focus: rgba(172, 206, 221, 1);
-    --radio-unselected-icon-color-focus: rgba(172, 206, 221, 1);
+
+     --checbox-focus: 0px 0px 5px 0px rgba(142, 187, 207, 0.60);
+
+    --checkbox-unselected-bg-color-default: #ffffff;
+    --checkbox-unselected-bg-color-disable: #ffffff;
+    --checkbox-unselected-bg-color-mandatory: #ffffff;
+    --checkbox-unselected-bg-color-hover: #ffffff;
+    --checkbox-unselected-bg-color-focus: #ffffff;
+    
+    --checkbox-unselected-border-color-default: #000000;
+    --checkbox-unselected-border-color-disable: #C8C8C8;
+    --checkbox-unselected-border-color-mandatory: #30C6F5;
+    --checkbox-unselected-border-color-hover: #80A9BB;
+    --checkbox-unselected-border-color-focus: #ACCEDD;
+    
+    --checkbox-selected-bg-color-default: #ffffff;
+    --checkbox-selected-bg-color-disable: #ffffff;
+    --checkbox-selected-bg-color-mandatory: #ffffff;
+    --checkbox-selected-bg-color-hover: #ffffff;
+    --checkbox-selected-bg-color-focus: #ffffff;
+    
+    --checkbox-selected-border-color-default: #8EBBCF;
+    --checkbox-selected-border-color-disable: #c8c8c8;
+    --checkbox-selected-border-color-mandatory: #30C6F5;
+    --checkbox-selected-border-color-hover: #80A9BB;
+    --checkbox-selected-border-color-focus: #ACCEDD;
+    
+    --checkbox-selected-icon-color-default: #8EBBCF;
+    --checkbox-selected-icon-color-disable: #C8C8C8;
+    --checkbox-selected-icon-color-mandatory: #30C6F5;
+    --checkbox-selected-icon-color-hover: #80A9BB;
+    --checkbox-selected-icon-color-focus: #ACCEDD;
+
+    
+    --radio-unselect-bg-color-default: #ffffff;
+    --radio-unselect-border-color-default: #000000;
+    --radio-unselect-border-color-disable: #C8C8C8;
+    --radio-unselect-border-color-mandatory: #30C6F5;
+    --radio-unselect-border-color-hover: #000000;
+    --radio-unselected-border-color-focus: #ACCEDD;
+    --radio-selected-bg-color-default: #8EBBCF;
+    --radio-selected-border-color-default: #8EBBCF;
+    --radio-selected-bg-color-disable: #C8C8C8;
+    --radio-selected-border-color-disable: #C8C8C8;
+    --radio-selected-bg-color-mandatory: #30C6F5;
+    --radio-selected-border-color-mandatory: #30C6F5;
+    --radio-selected-bg-color-hover: #8EBBCF;
+    --radio-selected-border-color-hover: #8EBBCF;
+    --radio-selected-bg-color-focus: #ACCEDD;
+    --radio-selected-border-color-focus: #ACCEDD;
+
+
     --treeview-arrow-color-default: rgba(0, 0, 0, 1);
     --treeview-arrow-color-disable: rgba(200, 200, 200, 1);
     --treeview-bg-color-focus: rgba(255, 255, 255, 1);
@@ -122,7 +160,7 @@
     --treeview-text-color-selected: rgba(255, 255, 255, 1);
     --treeview-text-color-default: rgba(0, 0, 0, 1);
     --treeview-text-color-disable: rgba(200, 200, 200, 1);
-    --listitem-bg-color-default: rgba(252, 252, 252, 1);
+    --listitem-bg-color-default: #fff;
     --listitem-bg-color-hover: rgba(245, 245, 245, 1);
     --listitem-border-color-default: rgba(245, 245, 245, 1);
     --listitem-icon-color-default: rgba(142, 187, 207, 1);
@@ -213,6 +251,8 @@
     --combobox-summary-bg-color: rgba(249, 249, 249, 1);
     --combobox-summary-border-color: rgba(126, 123, 123, 1);
     --window-bg-color-default: rgba(255, 255, 255, 1);
+    --window-border-color-default:#E5F6FE;
+    --window-window-title-header:#4B4B4B;
     --loanslider-track-bg-color-default: rgba(245, 245, 245, 1);
     --loanslider-progress-bg-color-default: rgba(142, 187, 207, 1);
     --loanslider-progress-bg-color-disable: rgba(200, 200, 200, 1);
@@ -312,9 +352,6 @@
     --listitem-text-color-disable: rgba(200, 200, 200, 1);
     --label-row-title: rgba(142, 187, 207, 1);
     --label-toolbar-title: rgba(255, 255, 255, 1);
-    --checkbox-icon-color-mandatory: rgba(48, 198, 245, 1);
-    --checkbox-selected-icon-color-hover: rgba(128, 169, 187, 1);
-    --checkbox-unselected-icon-color-hover: rgba(128, 169, 187, 1);
     --listview-border-color-default: rgba(222, 222, 222, 1);
     --toolbar-bg-color: rgba(5, 159, 207, 1);
     --listitem-container-border-color: rgba(205, 231, 242, 1);
@@ -327,7 +364,7 @@
     --label-text-color-title: rgba(0, 130, 171, 1);
     --label-text-color-subtitle: rgba(126, 123, 123, 1);
     --label-text-color-display: rgba(255, 255, 255, 1);
-    --label-text-color-listvalue: rgba(0, 130, 171, 1);
+    --label-text-color-listvalue: black;
     --label-text-color-listcaption: rgba(0, 130, 171, 1);
     --vanilla--other--black: rgba(0, 0, 0, 1);
     --vanilla--other--white: rgba(255, 255, 255, 1);
@@ -430,12 +467,12 @@
     --floatbutton-shadow-disable:  0px 0px 5px rgba(200, 200, 200, 0.08), 0px 2px 4px rgba(200, 200, 200, 0.1), 0px 4px 5px rgba(200, 200, 200, 0.15);
     --switch-focus:  0px 4px 8px rgba(142, 187, 207, 0.5);
     --checbox-focus:  0px 0px 5px rgba(142, 187, 207, 0.6);
-    --radio-focus:  0px 0px 0px rgba(142, 187, 207, 0.3);
+
     --loanslider-handle-focus:  0px 0px 0px rgba(172, 206, 221, 0.5);
     --groupbutton-shadow-focus:  0px 0px 6px rgba(142, 187, 207, 1);
     --canvas-icon-shdow-focus:  0px 0px 6px rgba(142, 187, 207, 0.25);
-    --checkbox-hover:  0px 0px 0px rgba(231, 231, 231, 1);
-    --radio-hover:  0px 0px 0px rgba(231, 231, 231, 1);
+    
+
     --messagebox-box-shadow:  0px 4px 8px rgba(142, 187, 207, 0.2), 0px 0px 5px rgba(142, 187, 207, 0.1);
     --button--focus:  0px 4px 8px rgba(142, 187, 207, 0.5);
     --button--floating-button-shadow:  0px 10px 10px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 8px rgba(0, 0, 0, 0.1);
