--- a/base-newStyle copy/components/bin/newStyle.css
+++ b/base-newStyle copy/components/bin/newStyle.css
@@ -5833,12 +5833,25 @@ body.checkout-flow-v7.bg2 {
   border: 1px solid #8C4D9C !important;
 }
 
+#TafnitCore_SaaSServer_Survey_UI_Survey .xstyle-image-wrapper {
+  top: 50%;
+  transform: translateY(-50%);
+}
+#TafnitCore_SaaSServer_Survey_UI_Survey .xstyle-image-wrapper img {
+  height: auto !important;
+  width: 150px !important;
+}
+
 #TafnitCore_SaaSServer_Survey_UI_Survey {
   padding: 0 !important;
 }
 #TafnitCore_SaaSServer_Survey_UI_Survey .x-control-wrapper {
   flex-wrap: wrap;
   width: 100%;
+}
+#TafnitCore_SaaSServer_Survey_UI_Survey div[uxid=SurveyMainSec] {
+  height: 81px !important;
+  border: none !important;
 }
 #TafnitCore_SaaSServer_Survey_UI_Survey .xstyle-linkslist-wrapper .x-grid-control .k-grid-content td a {
   position: relative;
@@ -5866,7 +5879,7 @@ body.checkout-flow-v7.bg2 {
   position: absolute;
   height: 268px;
   left: 0px;
-  top: 69px;
+  top: 80px;
   background: #8C4D9C;
   border-radius: 20px 20px 0px 0px;
   border: none !important;
@@ -5942,7 +5955,7 @@ body.checkout-flow-v7.bg2 {
   background: #FFFFFF !important;
   border-radius: 20px !important;
   border: none !important;
-  margin-top: 115px !important;
+  margin-top: 120px !important;
   padding: 30px 15px !important;
   width: 100%;
   position: absolute;
@@ -7329,9 +7342,6 @@ html:has(#TafnitCore_System_UI_App_Tools_FillAndSignV2Page) {
   font-size: 16px !important;
   line-height: 100% !important;
   color: black !important;
-}
-#TafnitCore_System_UI_App_Tools_FillAndSignV2Page .xstyle-checkbox-wrapper.x-control-wrapper {
-  flex-direction: row-reverse !important;
 }
 #TafnitCore_System_UI_App_Tools_FillAndSignV2Page .xstyle-checkbox-wrapper.x-control-wrapper .x-control-caption-wrapper {
   flex: auto;
@@ -8764,7 +8774,7 @@ body:has(#TafnitCore_SaaSServer_Storage_UI_FileViewer) {
   box-shadow: none;
   border: none !important;
   border-radius: 0;
-  height: 68px;
+  height: 80px;
   z-index: 50;
 }
 #TafnitCore_SaaSServer_Survey_UI_Survey .x-taas-header .xstyle-image-wrapper {
