--- a/copy/Tass/Surevy/_Survey.scss
+++ b/copy/Tass/Surevy/_Survey.scss
@@ -42,9 +42,11 @@
 #TafnitCore_SaaSServer_Survey_UI_Survey {
 
     .xstyle-image-wrapper      {
-
+        top: 50%;
+        transform: translateY(-50%);
         img{
         height: auto !important;
+        width: 150px !important;
         }
     }
     .x-control-wrapper{
