--- a/site/alber/Tass/bin/style.css
+++ b/site/alber/Tass/bin/style.css
@@ -401,7 +401,7 @@ body {
   box-shadow: 0px 0px 4px #1182B1 !important;
 }
 #TafnitCore_System_UI_App_Tools_FillAndSignV2Page .xstyle-checkbox-wrapper.x-control-wrapper input:checked::before {
-  background-color: white !important;
+  background-color: #007FC1 !important;
 }
 #TafnitCore_System_UI_App_Tools_FillAndSignV2Page .xstyle-kicon-wrapper .k-icon.fa-camera-retro, #TafnitCore_System_UI_App_Tools_FillAndSignV2Page .xstyle-kicon-wrapper .k-icon.fas.fa-play, #TafnitCore_System_UI_App_Tools_FillAndSignV2Page .xstyle-kicon-wrapper .k-icon.fas.fa-stop {
   background: #10143A;
