--- a/site/tornado/Tass/bin/style.css
+++ b/site/tornado/Tass/bin/style.css
@@ -421,9 +421,6 @@ body {
   width: 10px !important;
   height: 10px !important;
 }
-#TafnitCore_System_UI_App_Tools_FillAndSignV2Page .xstyle-checkbox-wrapper.x-control-wrapper {
-  flex-direction: row-reverse !important;
-}
 #TafnitCore_System_UI_App_Tools_FillAndSignV2Page .xstyle-checkbox-wrapper.x-control-wrapper .x-control-content-wrapper {
   flex-grow: 0.1 !important;
 }
@@ -525,8 +522,13 @@ body {
   box-shadow: 0px 0px 6px 0px rgba(229, 62, 7, 0.6) !important;
 }
 
+#TafnitCore_SaaSServer_Survey_UI_Survey .xstyle-image-wrapper {
+  top: 50%;
+  transform: translateY(-50%);
+}
 #TafnitCore_SaaSServer_Survey_UI_Survey .xstyle-image-wrapper img {
   height: auto !important;
+  width: 150px !important;
 }
 #TafnitCore_SaaSServer_Survey_UI_Survey .x-control-wrapper {
   flex-wrap: wrap;
