--- a/studio/style.scss
+++ b/studio/style.scss
@@ -77,7 +77,7 @@
     }
 
     .border {
-        border: none ;
+        border: none;
     }
 
     .xstyle-itoolbar-wrapper:nth-of-type(1) {
@@ -164,7 +164,7 @@
         }
     }
 
-    .ux-studio-border {
+    .ux-studio-border.ux-studio-xtafnit-container {
 
         header,
         footer,
@@ -239,6 +239,8 @@
             border: 1px solid #A1A3A5 !important;
         }
 
+
+
         header::before,
         footer::before,
         mainbody::before,
@@ -264,6 +266,7 @@
         mainbody::before {
             background-color: #FFC328;
         }
+
 
         .ux-studio-selected {
             background-image: none !important;
