--- a/Newbase-newStyle/components/Other/_layout.scss
+++ b/Newbase-newStyle/components/Other/_layout.scss
@@ -18,7 +18,7 @@ body,
 #uber-container,
 .xtafnit_pageContainer,
 mainbody {
-    height: 100% !important;
+    height: 100% ;
 
  
 }
@@ -39,7 +39,7 @@ mainbody {
 
 
 
-#uber-container,
+ber-container,
 .container-fluid {
     width: 100%;
     max-width: none;
