--- a/Newbase-newStyle/components/_grid.scss
+++ b/Newbase-newStyle/components/_grid.scss
@@ -1,4 +1,4 @@
-.xstyle-gridv4-wrapper,.xstyle-igrid-wrapper,.xstyle-gridv4lookup-wrapper {
+.xstyle-gridv4-wrapper,.xstyle-igrid-wrapper,.xstyle-gridv4lookup-wrapper,.xstyle-treelist-wrapper {
 // toolbar //
 .k-auto-scrollable{
  
