--- a/Newbase-newStyle/components/container-controls/_drawer.scss
+++ b/Newbase-newStyle/components/container-controls/_drawer.scss
@@ -144,9 +144,9 @@
 
             .x-dynamic-label-control {
                 white-space: nowrap;
-                color: black !important;
+                color: black ;
                 font-family: 'heebo';
-                font-size: 18px !important;
+                font-size: 18px ;
             }
 
             .k-link.k-header {
