--- a/copy/portal/PortalUpdateOrder/components/_drawer.scss
+++ b/copy/portal/PortalUpdateOrder/components/_drawer.scss
@@ -1,4 +1,4 @@
-.k-drawer-container .k-drawer{
+.k-drawer-container.k-drawer-expanded .k-drawer{
     height: auto !important;
     top: 60px !important;
     right: 10px !important;
