--- a/Newbase-newStyle/components/Simple/_textbox.scss
+++ b/Newbase-newStyle/components/Simple/_textbox.scss
@@ -14,6 +14,12 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+&.x-textbox-small{
+  & input{
+    height: 30px !important;
+  }
+}
+
 /* Firefox */
 
 
