--- a/Newbase-newStyle/components/Value-Control/_radio-button.scss
+++ b/Newbase-newStyle/components/Value-Control/_radio-button.scss
@@ -14,23 +14,34 @@
     }
 
     .x-radio-input{
-        border: 1px solid var(--radio-unselect-border-color-default);
-        background: var(--radio-unselect-bg-color-default);
+        border: 1px solid var(--radio-unselected-border-color-default);
+        background: var(--radio-unselected-bg-color-default);
 
         &:hover{
-           border: 1px solid var(--radio-unselect-border-color-hover); 
+           border: 1px solid var(--radio-unselected-border-color-hover); 
+           background: var(--radio-unselected-bg-color-hover);
         }
 
 
         &:checked{
+            background: var(--radio-selected-bg-color-default);
             border: 1px solid var(--radio-selected-border-color-default);
             &:before{
                 background: var(--radio-selected-icon-color-default);;
             }
 
+            &:hover{
+                border: 1px solid var(--radio-selected-border-color-hover); 
+                background: var(--radio-selected-bg-color-hover);
+             }
+
             &:focus{
-                filter: drop-shadow(0px 4px 8px rgba(142, 187, 207, 0.50));
-                border: 1px solid var(--radio-selected-icon-color-default);
+               box-shadow: var(--radio-focus);
+                border: 1px solid var(--radio-selected-border-color-focus);
+
+                &:before{
+                    background: var(--radio-selected-icon-color-focus);;
+                }
             }
         }
     }
